add require dependency

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
     />
     <link rel="stylesheet" href="index.css" />
     <script defer src="render.js"></script>
+    <script defer src="GameSelectionPanel.js"></script>
+
 
     <!-- Custom fonts for this template-->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -22,36 +24,42 @@
   </head>
   <body class="content">
 
-    <h1>OBS Text Editor</h1>
 
-<!-- selection options -->
-<div class="row">
-    <div class="col-xl-3 col-md-6 mb-4">
-        <div class="card border-left-primary shadow h-100 py-2">
-            <div class="card-body">
-                <div class="row no-gutters align-items-center">
-                    <div class="col mr-2">
-                        <div class="h5 mb-0 font-weight-bold text-gray-800">Overwatch</div>
-                    </div>
-                    <div class="col-auto">
-                        <i class="fas fa-calendar fa-2x text-gray-300"></i>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+  <div class="extra-padding">
+    <h1><center>OBS Text Editor</center></h1>
+
   </div>
 
 
-    <video></video>
+<!-- selection options -->
 
-    <button id="startBtn" class="button is-primary">Start</button>
+
+    <div class="row justify-content-center">
+      <a class="" href="#displayOptions"
+
+        <div class="col-xl-2 col-md-6 mb-4">
+            <div class="card shadow h-100 py-2">
+                <div class="card-body">
+
+                      <div class="col mr-2 card-square">
+
+                          <div class="h3 mb-0 font-weight-bold text-gray-800">Overwatch</div>
+                      </div>
+
+                </div>
+            </div>
+        </div>
+      </a>
+
+
+
+    <!-- <video></video>
+
+    <button id="startBtn" class="button is-primary">Start</button> -->
     <button id="stopBtn" class="button is-warning">Stop</button>
 
     <hr />
 
-    <button id="videoSelectBtn" class="button is-text">
-      Choose a Video Source
-    </button>
+
   </body>
 </html>
