--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,10 @@
       href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
     />
     <link rel="stylesheet" href="index.css" />
-    <script defer src="render.js"></script>
-    <script defer src="GameSelectionPanel.js"></script>
+    <script defer src="scripts/render.js"></script>
+    <script defer src="scripts/GameSelectionPanel.js"></script>
+    <script src="scripts/require.js"></script>
+
 
 
     <!-- Custom fonts for this template-->
