--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,14 @@
       href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
     />
     <link rel="stylesheet" href="index.css" />
-    <script defer src="scripts/render.js"></script>
-    <script defer src="scripts/GameSelectionPanel.js"></script>
-    <script src="scripts/require.js"></script>
+    <script data-main="index.js" src="scripts/require.js"></script>
+    <script src="scripts/render.js"></script>
+    <!-- <script defer src="scripts/GameSelectionPanel.js"></script> -->
 
 
 
     <!-- Custom fonts for this template-->
-    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <!-- <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css"> -->
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
