removed require dependency, removed render js file to remove all errors

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
     />
     <link rel="stylesheet" href="index.css" />
-    <script data-main="index.js" src="scripts/require.js"></script>
+    <!-- <script data-main="index.js" src="scripts/require.js"></script> -->
     <script src="scripts/render.js"></script>
     <!-- <script defer src="scripts/GameSelectionPanel.js"></script> -->
 
