remove files to finalize require issue

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="index.css" />
     <!-- <script data-main="index.js" src="scripts/require.js"></script> -->
     <script src="scripts/render.js"></script>
-    <!-- <script defer src="scripts/GameSelectionPanel.js"></script> -->
+    <script defer src="scripts/GameSelectionPanel.js"></script>
 
 
 
@@ -32,26 +32,47 @@
 
   </div>
 
+  <!-- <div class="row justify-content-center">
+    <a class="" href="#displayOptions"
 
+      <div class="col-xl-2 col-md-6 mb-4">
+          <div class="card shadow h-100 py-2">
+              <div class="card-body">
+                <div class="row no-gutters align-items-center">
+
+                    <div class="col mr-2 card-square">
+
+                        <div class="h3 mb-0 font-weight-bold text-gray-800">Overwatch</div>
+                    </div>
+                </div>
+              </div>
+          </div>
+      </div>
+    </a> -->
 <!-- selection options -->
 
+<div class="row justify-content-center">
 
-    <div class="row justify-content-center">
-      <a class="" href="#displayOptions"
+    <!-- Earnings (Monthly) Card Example -->
+  <a href="#" class="card-body">
 
-        <div class="col-xl-2 col-md-6 mb-4">
-            <div class="card shadow h-100 py-2">
-                <div class="card-body">
+    <div class="col-xl-2 col-md-6 mb-4">
+      <div class="card shadow h-100 py-2">
 
-                      <div class="col mr-2 card-square">
+          <div class="card-body">
+              <div class="row no-gutters align-items-center">
+                  <div class="col mr-2 card-square">
+                      <div class="h3 mb-0 font-weight-bold text-gray-800">Overwatch</div>
+                  </div>
+              </div>
+          </div>
+      </div>
+    </div>
+  </a>
 
-                          <div class="h3 mb-0 font-weight-bold text-gray-800">Overwatch</div>
-                      </div>
 
-                </div>
-            </div>
-        </div>
-      </a>
+</div>
+
 
 
 
