created game panel file and navigation

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Hello World!</title>
+    <title>OBS Text Editor</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
@@ -53,8 +53,7 @@
 
 <div class="row justify-content-center">
 
-    <!-- Earnings (Monthly) Card Example -->
-  <a href="#" class="card-body">
+  <a href="htmlTemplates/GamePanel.html" class="card-body">
 
     <div class="col-xl-2 col-md-6 mb-4">
       <div class="card shadow h-100 py-2">
