--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
     />
-    <link rel="stylesheet" href="index.css" />
-    <!-- <script data-main="index.js" src="scripts/require.js"></script> -->
-    <script src="scripts/render.js"></script>
-    <script defer src="scripts/GameSelectionPanel.js"></script>
+    <link rel="stylesheet" href="index.css"/>
+    <script defer src="scripts/GameBaseFunctionality.js"></script>
 
 
 
@@ -52,8 +50,7 @@
 <!-- selection options -->
 
 <div class="row justify-content-center">
-
-      <div class="col-xl-2 col-md-6 mb-4">
+      <div class="col-xl-2 col-md-6 mb-4" id="gamePanelOW">
         <div class="card shadow h-100 py-2">
 
             <a href="htmlTemplates/GamePanel.html" class="card-body">
@@ -65,23 +62,9 @@
             </a>
         </div>
       </div>
-
-      <div class="col-xl-2 col-md-6 mb-4">
-        <div class="card shadow h-100 py-2">
-
-            <a href="htmlTemplates/GamePanel.html" class="card-body">
-                <div class="row no-gutters align-items-center">
-                    <div class="col mr-2 card-square">
-                        <div class="h3 mb-0 font-weight-bold text-gray-800">Overwatch</div>
-                    </div>
-                </div>
-            </a>
-        </div>
-      </div>
-
-
-
 </div>
+
+
 
 
 
