fix navigation between pages

--- a/src/htmlTemplates/GamePanel.html
+++ b/src/htmlTemplates/GamePanel.html
@@ -24,4 +24,9 @@
 
   <body class="content">
       <div class="h3 mb-0 font-weight-bold text-gray-800">Game Panel</div>
+      <!-- <button id="backButton" onclick="location.href'src/index.html" class="button is-warning" type="button">Stop</button> -->
+      <a class="button is-warning" href="../index.html">Back</a>
+
+
   </body>
+</html>
