--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
     />
-    <link rel="stylesheet" href="index.css"/>
+    <link rel="stylesheet" href="index.css" />
     <script defer src="scripts/GameBaseFunctionality.js"></script>
 
 
@@ -49,31 +49,20 @@
     </a> -->
 <!-- selection options -->
 
-<div class="row justify-content-center">
-      <div class="col-xl-2 col-md-6 mb-4" id="gamePanelOW">
-        <div class="card shadow h-100 py-2">
+    <div class="row justify-content-center">
+          <div id='gamePanelOW' class="col-xl-2 col-md-6 mb-4">
+            <div class="card shadow h-100 py-2">
 
-            <a href="htmlTemplates/GamePanel.html" class="card-body">
-                <div class="row no-gutters align-items-center">
-                    <div class="col mr-2 card-square">
-                        <div class="h3 mb-0 font-weight-bold text-gray-800">Overwatch</div>
+                <a href="htmlTemplates/GamePanel.html" class="card-body">
+                    <div class="row no-gutters align-items-center">
+                        <div class="col mr-2 card-square">
+                            <div class="h3 mb-0 font-weight-bold text-gray-800">Overwatch</div>
+                        </div>
                     </div>
-                </div>
-            </a>
-        </div>
-      </div>
-</div>
-
-
-
-
-
-
-    <!-- <video></video>
-
-    <button id="startBtn" class="button is-primary">Start</button> -->
-    <button id="stopBtn" class="button is-warning">Stop</button>
-
+                </a>
+            </div>
+          </div>
+    </div>
     <hr />
 
 
