--- a/src/htmlTemplates/GamePanel.html
+++ b/src/htmlTemplates/GamePanel.html
@@ -8,7 +8,6 @@
       href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
     />
     <link rel="stylesheet" href="../index.css"/>
-    <script defer src="../scripts/GameBaseFunctionality.js"></script>
 
 
     <!-- Custom fonts for this template-->
@@ -24,9 +23,11 @@
 
   <body class="content">
       <div class="h3 mb-0 font-weight-bold text-gray-800">Game Panel</div>
-      <!-- <button id="backButton" onclick="location.href'src/index.html" class="button is-warning" type="button">Stop</button> -->
+<button onclick ="myFunction()"></button>
       <a class="button is-warning" href="../index.html">Back</a>
 
 
   </body>
+  <script src="../scripts/GameBaseFunctionality.js"></script>
+
 </html>
