--- a/src/index.html
+++ b/src/index.html
@@ -50,10 +50,10 @@
 <!-- selection options -->
 
     <div class="row justify-content-center">
-          <div id='gamePanelOW' class="col-xl-2 col-md-6 mb-4">
+          <div class="col-xl-2 col-md-6 mb-4">
             <div class="card shadow h-100 py-2">
 
-                <a href="htmlTemplates/GamePanel.html" class="card-body">
+                <a name="gamePanelOW" onclick="button()" href="htmlTemplates/GamePanel.html" class="card-body">
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2 card-square">
                             <div class="h3 mb-0 font-weight-bold text-gray-800">Overwatch</div>
