--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
           <div class="col-xl-2 col-md-6 mb-4">
             <div class="card shadow h-100 py-2">
 
-                <a name="gamePanelOW" onclick="button()" href="htmlTemplates/GamePanel.html" class="card-body">
+                <a onclick="navigateToGamePanel('OW')" href="htmlTemplates/GamePanel.html" class="card-body">
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2 card-square">
                             <div class="h3 mb-0 font-weight-bold text-gray-800">Overwatch</div>
@@ -62,6 +62,59 @@
                 </a>
             </div>
           </div>
+
+          <div class="col-xl-2 col-md-6 mb-4">
+            <div class="card shadow h-100 py-2">
+
+                <a onclick="navigateToGamePanel('LoL')" href="htmlTemplates/GamePanel.html" class="card-body">
+                    <div class="row no-gutters align-items-center">
+                        <div class="col mr-2 card-square">
+                            <div class="h3 mb-0 font-weight-bold text-gray-800">League of Legends</div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+          </div>
+
+          <div class="col-xl-2 col-md-6 mb-4">
+            <div class="card shadow h-100 py-2">
+
+                <a onclick="navigateToGamePanel('RL')" href="htmlTemplates/GamePanel.html" class="card-body">
+                    <div class="row no-gutters align-items-center">
+                        <div class="col mr-2 card-square">
+                            <div class="h3 mb-0 font-weight-bold text-gray-800">Rocket League</div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+          </div>
+
+          <div class="col-xl-2 col-md-6 mb-4">
+            <div class="card shadow h-100 py-2">
+
+                <a onclick="navigateToGamePanel('SSBU')" href="htmlTemplates/GamePanel.html" class="card-body">
+                    <div class="row no-gutters align-items-center">
+                        <div class="col mr-2 card-square">
+                            <div class="h3 mb-0 font-weight-bold text-gray-800">Super Smash Bros</div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+          </div>
+
+          <div class="col-xl-2 col-md-6 mb-4">
+            <div class="card shadow h-100 py-2">
+
+                <a onclick="navigateToGamePanel('Chess')" href="htmlTemplates/GamePanel.html" class="card-body">
+                    <div class="row no-gutters align-items-center">
+                        <div class="col mr-2 card-square">
+                            <div class="h3 mb-0 font-weight-bold text-gray-800">Chess</div>
+                        </div>
+                    </div>
+                </a>
+            </div>
+          </div>
+
     </div>
     <hr />
 
