--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
       href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
     />
     <link rel="stylesheet" href="index.css" />
-    <script defer src="scripts/GameBaseFunctionality.js"></script>
 
 
 
@@ -26,7 +25,7 @@
 
 
   <div class="extra-padding">
-    <h1><center>OBS Text Editor</center></h1>
+    <h1 id="gamePanelTitle"><center>OBS Text Editor</center></h1>
 
   </div>
 
@@ -120,4 +119,6 @@
 
 
   </body>
+  <script src="scripts/GameBaseFunctionality.js"></script>
+
 </html>
