added roster selection

--- a/src/htmlTemplates/GamePanel.html
+++ b/src/htmlTemplates/GamePanel.html
@@ -36,13 +36,43 @@
                       <div class="col-lg-7">
                           <div class="p-5">
                               <form class="user">
+                                <div class="form-group row">
+                                  <!-- <div id="teamInputTitle" class="h3 mb-0 font-weight-bold text-gray-800">!</div> -->
 
-                                <div class="form-group">
+                                    <div id="" class="h3 mb-0 font-weight-bold text-gray-800">Opposing Team Name</div>
                                     <input type="email" class="form-control form-control-user" id="exampleInputEmail"
                                         placeholder="Email Address">
                                 </div>
-                              <!-- <div id="teamInputTitle" class="h3 mb-0 font-weight-bold text-gray-800">!</div> -->
-                                <div id="" class="h3 mb-0 font-weight-bold text-gray-800">!</div>
+
+                                <div class="form-group row">
+                                  <!-- <div id="teamInputTitle" class="h3 mb-0 font-weight-bold text-gray-800">!</div> -->
+
+                                    <div class="h3 mb-0 font-weight-bold text-gray-800">Season</div>
+                                    <!-- add radial buttons-->
+                                </div>
+
+                                <div class="form-group row">
+
+                                  <div class="h3 mb-0 font-weight-bold text-gray-800">Roster Selection</div>
+
+
+                                </div>
+                                <div class="row">
+                                  <div class="col-sm-6 mb-3 mb-sm-0">
+
+                                    <div class="h5 mb-0 text-gray-800">Player name</div>
+
+                                  </div>
+                                  <div class="col-sm-6 mb-3 mb-sm-0">
+
+                                    <div class="h5 mb-0 text-gray-800">Player type</div>
+                                  </div>
+                                </div>
+                                <!-- dropdown-->
+
+
+
+
                               </form>
                           </div>
                       </div>
