created filter button and trigger

--- a/src/htmlTemplates/GamePanel.html
+++ b/src/htmlTemplates/GamePanel.html
@@ -55,9 +55,11 @@
 
                                 <div class="form-group row">
 
-                                  <div class="h3 mb-0 font-weight-bold text-gray-800">Roster Selection</div>
+                                    <div class="h3 mb-0 font-weight-bold text-gray-800">Roster Selection</div>
 
-
+                                    <a href="#" class="btn btn-primary btn-circle">
+                                        <span onclick="filterSelected()" class="material-icons icon-size-small">filter_list</span>
+                                    </a>
                                 </div>
                                 <div class="row">
                                   <div class="col-sm-6 mb-3 mb-sm-0">
@@ -73,10 +75,6 @@
                                             <a class="dropdown-item" href="#">Another action</a>
                                             <a class="dropdown-item" href="#">Something else here</a>
                                         </div>
-                                    </div>
-
-                                    <div class="row">
-                                        <span class="material-icons icon-size-small">filter_list</span>
                                     </div>
 
 
