clear roster and generate stream button

--- a/src/htmlTemplates/GamePanel.html
+++ b/src/htmlTemplates/GamePanel.html
@@ -76,16 +76,14 @@
                                             <a class="dropdown-item" href="#">Something else here</a>
                                         </div>
                                     </div>
-
-
                                   </div>
-
-
                                 </div>
                                 <!-- dropdown-->
 
-
-
+                                <div class="form-group row">
+                                  <a onclick="clearRoster()" class="btn btn-secondary" href="../index.html">Clear Roster</a>
+                                </div>
+                                <center><a onclick="generateStream()" class="btn btn-success color-green btn-lg-2">Generate Stream</a></center>
 
                               </form>
                           </div>
