--- a/src/htmlTemplates/GamePanel.html
+++ b/src/htmlTemplates/GamePanel.html
@@ -101,7 +101,6 @@
                                   <div class="row">
 
                                       <div class="row">
-                                        <div class=""
                                         <div class="dropdown mb-4">
                                             <button class="btn btn-primary dropdown-toggle" type="button"
                                                 id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
@@ -121,7 +120,7 @@
                                   </div>
                                   <!-- dropdown-->
 
-                                  <div class="form-group row left-padding">
+                                  <div class="form-group row">
                                     <a onclick="clearRoster()" class="btn btn-secondary" href="../index.html">Clear Roster</a>
                                   </div>
                                 </form>
