last minute changes

--- a/src/htmlTemplates/GamePanel.html
+++ b/src/htmlTemplates/GamePanel.html
@@ -49,7 +49,7 @@
 
                                   </div>
                                   <div class ="mb-2">
-                                    <input type="email" class="form-control form-control-user" id="exampleInputEmail"
+                                    <input onclick="generateTitle()" class="form-control form-control-user" id="inputTitle"
                                         placeholder="">
                                   </div>
 
