--- a/src/htmlTemplates/GamePanel.html
+++ b/src/htmlTemplates/GamePanel.html
@@ -40,23 +40,20 @@
                         <div class="col-lg-7">
                             <div class="p-5">
                                 <form class="user">
-                                    <!-- <div id="teamInputTitle" class="h3 mb-0 font-weight-bold text-gray-800">!</div> -->
                                   <div class="form-group row">
 
                                       <div class="mb-2">
-                                          <div id="" class="h3 mb-0 font-weight-bold text-gray-800">Opposing Team Name</div>
+                                          <div id="teamInputTitle" class="h3 mb-0 font-weight-bold text-gray-800">Opposing Team Name</div>
                                       </div>
 
                                   </div>
                                   <div class ="mb-2">
-                                    <input onclick="generateTitle()" class="form-control form-control-user" id="inputTitle"
+                                    <input onkeyup="generateTitle()" class="form-control form-control-user" id="inputTitle"
                                         placeholder="">
                                   </div>
 
 
                                   <div class="form-group row">
-                                    <!-- <div id="teamInputTitle" class="h3 mb-0 font-weight-bold text-gray-800">!</div> -->
-
                                       <div class="h3 mb-0 font-weight-bold text-gray-800">Season</div>
                                   </div>
 
