--- a/src/htmlTemplates/GamePanel.html
+++ b/src/htmlTemplates/GamePanel.html
@@ -145,11 +145,10 @@
                           <div class="col-lg-7">
                               <div class="p-5">
                                   <form class="user">
-                                      <!-- <div id="teamInputTitle" class="h3 mb-0 font-weight-bold text-gray-800">!</div> -->
                                     <div class="form-group row">
                                       <div class="mb-2">
 
-                                          <div id="" class="h3 mb-0 font-weight-bold text-gray-800">Stream Preview</div>
+                                          <div class="h3 mb-0 font-weight-bold text-gray-800">Stream Preview</div>
                                       </div>
                                     </div>
 
@@ -157,7 +156,7 @@
 
                                     <div class="form-group">
 
-                                      <div class="h5 mb-0 font-weight-light text-gray-800">Stream Preview</div>
+                                      <div id="streamPreviewLabel"class="h5 mb-0 font-weight-light text-gray-800">Stream Preview</div>
                                     </div>
                                     <div class="h5 mb-0 font-weight-light text-gray-800">
 
