functionality to create titles

--- a/src/htmlTemplates/GamePanel.html
+++ b/src/htmlTemplates/GamePanel.html
@@ -59,25 +59,25 @@
 
                                   <div class="form-group">
                                       <div class="custom-control custom-radio col-lg-3">
-                                          <input type="radio" checked="checked" id="orgtype1" name="orgtype" class="custom-control-input">
+                                          <input type="radio" onclick = "updateSeason('Preseason')" checked="checked" id="orgtype1" name="orgtype" class="custom-control-input">
                                           <label class="custom-control-label" for="orgtype1">
                                               Preseason
                                           </label>
                                       </div>
                                       <div class="custom-control custom-radio col-lg-3">
-                                          <input type="radio" id="orgtype2" name="orgtype" class="custom-control-input">
+                                          <input type="radio" onclick = "updateSeason('MainSeason')" id="orgtype2" name="orgtype" class="custom-control-input">
                                           <label class="custom-control-label" for="orgtype2">
                                               MainSeason
                                           </label>
                                       </div>
                                       <div class="custom-control custom-radio col-lg-3">
-                                          <input type="radio" id="orgtype3" name="orgtype" class="custom-control-input">
+                                          <input type="radio" onclick = "updateSeason('Playoffs')" id="orgtype3" name="orgtype" class="custom-control-input">
                                           <label class="custom-control-label" for="orgtype3">
                                           Playoffs
                                           </label>
                                       </div>
                                       <div class="custom-control custom-radio col-lg-3">
-                                          <input type="radio" id="orgtype4" name="orgtype" class="custom-control-input">
+                                          <input type="radio" onclick = "updateSeason('Finals')" id="orgtype4" name="orgtype" class="custom-control-input">
                                           <label class="custom-control-label" for="orgtype4">
                                           Finals
                                           </label>
