add configuration panel and navigation

--- a/src/index.html
+++ b/src/index.html
@@ -29,25 +29,6 @@
 
   </div>
 
-  <!-- <div class="row justify-content-center">
-    <a class="" href="#displayOptions"
-
-      <div class="col-xl-2 col-md-6 mb-4">
-          <div class="card shadow h-100 py-2">
-              <div class="card-body">
-                <div class="row no-gutters align-items-center">
-
-                    <div class="col mr-2 card-square">
-
-                        <div class="h3 mb-0 font-weight-bold text-gray-800">Overwatch</div>
-                    </div>
-                </div>
-              </div>
-          </div>
-      </div>
-    </a> -->
-<!-- selection options -->
-
     <div class="row justify-content-center">
           <div class="col-xl-2 col-md-6 mb-4">
             <div class="card shadow h-100 py-2">
@@ -114,7 +95,17 @@
             </div>
           </div>
 
+
     </div>
+    <center>
+    <a href="../src/htmlTemplates/ConfigurationPanel.html" class="btn btn-primary btn-icon-split btn-lg">
+        <span class="text-white-50">
+            <i class="fas fa-flag"></i>
+        </span>
+        <span class="text">Configure OBS</span>
+    </a>
+
+  </center>
     <hr />
 
 
