establish configuration panel but may not be necessary dependning on creation of attributes in game panel

--- a/src/htmlTemplates/ConfigurationPanel.html
+++ b/src/htmlTemplates/ConfigurationPanel.html
@@ -25,7 +25,40 @@
 
   <body>
     <div>
-      <p> test </p>
+      <center><div id="" class="h1 mb-0 font-weight-bold color-black">Configuration Panel</div></center>
+
+      <center>
+            <div class="row justify-content-center">
+              <div class="container-square">
+
+
+                <div class="card o-hidden border-0 shadow-lg my-5">
+                    <div class="card-body p-0">
+                        <!-- Nested Row within Card Body -->
+                        <div class="row">
+                            <div class="col-lg-5 d-none"></div>
+
+                              <div class="col-lg-7">
+                                  <div class="p-5">
+
+                                      <form class="user">
+                                        <a href="#" class="btn btn-primary btn-icon-split btn-lg">
+                                            <span class="text-white-50">
+                                                <i class="fas fa-flag"></i>
+                                            </span>
+                                            <!-- <span class="text">Modify title formatting</span> -->
+                                        </a>
+                                      </form>
+
+                                  </div>
+                              </div>
+                        </div>
+                    </div>
+                  </div>
+              </div>
+            </div>
+        </a>
+      </center>
     </div>
 
 
