--- a/src/htmlTemplates/GamePanel.html
+++ b/src/htmlTemplates/GamePanel.html
@@ -108,12 +108,11 @@
                                     </div>
 
 
-                                    <div id="upload_button">
-                                        <label>
-                                          <input type="file" ngf-select ng-model="new_files" ng-change="fs.uploadFiles(new_files)" multiple>
-                                          <span class="btn btn-primary">Upload .csv</span>
-                                        </label>
-                                    </div>
+                                    <input type="file" id="fileUpload">
+                                    <span id="upload" value="Upload" onclick="readCSV()" class="btn btn-primary">Upload .csv</span>
+
+                                    <!-- <input type="file" id="fileUpload" />
+                                    <input type="button" id="upload" value="Upload" onclick="Upload()" /> -->
 
                                   <!-- end of dropdowns-->
                                   <div class="form-group row">
